<resources>
    <string name="app_name">Scribble</string>
    <string name="login_link">Login instead</string>
    <string name="sign_up_button">Sign up</string>
    <string name="enter_password">Enter password</string>
    <string name="select_username">Select username</string>
    <string name="create_account">Create account</string>
    <string name="login">Login</string>
    <string name="write_fab">write_fab</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_description">Enter description</string>
    <string name="write_story">Write story</string>
    <string name="enter_tags">Enter tags</string>
    <string name="post_story">Post Story</string>
    <string name="start_writing_here">Start writing here...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>